@startuml
'https://plantuml.com/class-diagram
title 工厂模式
abstract class AbstractAircraft
{
    -maxHp: int
    -hp: int
    -power: int
    -shootNum: int
    -direction: int
    -strategy: Strategy
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + getMaxHp():int
    + getShootnum():int
    +getDirection():int
    + setMaxHp():void
    + getPower():int
    + {abstract} shoot():List<BaseBullet>
    + setStrategy(String str):void
 }

abstract class AbstractEnemy extends AbstractAircraft implements Observer{
  - score: int
      -mode:int
      -time:int
     + AbstractEnemy(int locationX, int locationY, int speedX, int speedY, int hp,int mode,int time)
  + {abstract}adjustspeed(): void
  + getScore(): int
  + {abstract} createprop():void
  + {abstract} setMode(int mode):void
  + {abstract} update():void
  + {abstract} enforce():void
}

class EliteEnemy extends AbstractEnemy {
    -{static}bloodfactory: BloodpropFactory
    -{static}bombfactory: BombpropFactory
    -{static}bulletfactory: BulletpropFactory
    -{static}bulletplusfactory: BulletpluspropFactory
  + EliteEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int,int mode,int time)
  + forward(): void
  + shoot(): List<BaseBullet>
    + update():void
    +enforce():void
}
class EliteplusEnemy extends AbstractEnemy {
    -{static}bloodfactory: BloodpropFactory
    -{static}bombfactory: BombpropFactory
    -{static}bulletfactory: BulletpropFactory
    -{static}bulletplusfactory: BulletpluspropFactory
  + EliteEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int,int mode,int time)
  + forward(): void
  + shoot(): List<BaseBullet>
      + update():void
      +enforce():void
}
class MobEnemy extends AbstractEnemy {
    -{static}bloodfactory: BloodpropFactory
    -{static}bombfactory: BombpropFactory
    -{static}bulletfactory: BulletpropFactory
    -{static}bulletplusfactory: BulletpluspropFactory
  + EliteEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int,int mode,int time)
  + forward(): void
  + shoot(): List<BaseBullet>
      + update():void
      +enforce():void
}

class BossEnemy extends AbstractEnemy{
-{static}bloodfactory: BloodpropFactory
    -{static}bombfactory: BombpropFactory
    -{static}bulletfactory: BulletpropFactory
    -{static}bulletplusfactory: BulletpluspropFactory
  + EliteEnemy(locationX: int, locationY: int, speedX: int, speedY: int, hp: int,int mode,int time)
  + forward(): void
  + shoot(): List<BaseBullet>
      + update():void
          +enforce():void
}

interface EnemyFactory {
    createEnemy() : AbstractEnemy
    adjust(int time): void
    setMode(int mode): void
}
class EliteEnemyFactory implements EnemyFactory{
    -time:int
    -mode:int
    +createEnemy() : EliteEnemy
    +adjust(int time): void
    +setMode(int mode): void
}
class MobEnemyFactory implements EnemyFactory{
    -time:int
    -mode:int
    +createEnemy() : MobEnemy
    +adjust(int time): void
    +setMode(int mode): void
}
class EliteplusEnemyFactory implements EnemyFactory{
    -time:int
    -mode:int
    +createEnemy() : EliteplusEnemy
    +adjust(int time): void
    +setMode(int mode): void
}
class BossEnemyFactory implements EnemyFactory{
    -time:int
    -mode:int
    +createEnemy() : BossEnemy
    +adjust(int time): void
    +setMode(int mode): void
}
AbstractEnemy<..EnemyFactory
EliteEnemy<.. EliteEnemyFactory:create
MobEnemy<.. MobEnemyFactory:create
@enduml